fixed border-color for inputs in modal dialogs (dark mode)

--- a/ui/styles/app.less
+++ b/ui/styles/app.less
@@ -823,6 +823,7 @@ ul.sidebar {
             input {
                 background-color: @darkBgDarker;
                 color: @darkFgDarker;
+                border-color: black;
             }
         }
 
